change rounded button for every btn element

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="boxes">
         <div class="box">
             <i class="fas fa-chart-pie fa-4x"></i>
-            <h3>Analytics</h3>
+            <h3>Marketing</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, vitae.</p>
         </div>
         <div class="box">
