add new picture element

--- a/index.html
+++ b/index.html
@@ -73,15 +73,16 @@
     </section>
     <!-- portfolio -->
     <section class="portfolio">
-        <img src="https://source.unsplash.com/random/200x200" alt="">
-        <img src="https://source.unsplash.com/random/201x200" alt="">
-        <img src="https://source.unsplash.com/random/202x200" alt="">
-        <img src="https://source.unsplash.com/random/203x200" alt="">
-        <img src="https://source.unsplash.com/random/204x200" alt="">
-        <img src="https://source.unsplash.com/random/205x200" alt="">
-        <img src="https://source.unsplash.com/random/206x200" alt="">
-        <img src="https://source.unsplash.com/random/207x200" alt="">
-        <img src="https://source.unsplash.com/random/208x200" alt="">
+        <img src="https://source.unsplash.com/random/200x200" alt="picture1">
+        <img src="https://source.unsplash.com/random/201x200" alt="picture2">
+        <img src="https://source.unsplash.com/random/202x200" alt="picture3">
+        <img src="https://source.unsplash.com/random/203x200" alt="picture4">
+        <img src="https://source.unsplash.com/random/204x200" alt="picture5">
+        <img src="https://source.unsplash.com/random/205x200" alt="picture6">
+        <img src="https://source.unsplash.com/random/206x200" alt="picture7">
+        <img src="https://source.unsplash.com/random/207x200" alt="picture8">
+        <img src="https://source.unsplash.com/random/208x200" alt="picture9">
+        <img src="https://source.unsplash.com/random/209x200" alt="picture10">
     </section>
     <!-- footer section -->
     <footer class="footer">
